fix hamburger menu not aligning correctly

--- a/Szalloda/public/css/style.css
+++ b/Szalloda/public/css/style.css
@@ -22,6 +22,7 @@
 }
 
 body {
+    height: 100dvh;
     max-width: 1920px;
     margin-left: auto;
     margin-right: auto;
@@ -37,7 +38,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    min-height: 92vh;
+    /* min-height: 92vh; */
 }
 
 section{
@@ -178,6 +179,8 @@ section{
 
 footer {
     background-color: var(--colour_footer);
+    position: sticky;
+    top: 100%;
 }
 
 footer p {
